# Assessement_Image-Resizer-and-Video-Converter-and-Thumbnail-Extractor-Cpp

./: README.md  ffmpeg_install.sh  install_dependencies.sh  setup_project.sh
project/: CMakeLists.txt  FindFFmpeg.cmake  README.md  VideoConverterAndResizer  video_converter  video_converter.cpp
project/include/: IImageResizer.h  IImageSaver.h  IVideoConverter.h  ImageResizerFactory.h  ImageSaverFactory.h  JpegResizer.h  JpegSaver.h  PngResizer.h  PngSaver.h  ThumbnailExtractor.h  VideoConverterFactory.h  WebMConverter.h
project/src/: ImageResizerFactory.cpp  ImageSaverFactory.cpp  JpegResizer.cpp  JpegSaver.cpp  PngResizer.cpp  PngSaver.cpp  ThumbnailExtractor.cpp  VideoConverterFactory.cpp  WebMConverter.cpp  main.cpp
